force-app/main/default/objects/Contact/fields/Other_Skills__c.field-meta.xml
<CustomField>
    <fullName>Other_Skills__c</fullName>
    <label>Other Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>