force-app/main/default/objects/Contact/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <label>Passport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>