force-app/main/default/objects/Contact/fields/Passport_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Date__c</fullName>
    <label>Passport Date</label>
    <type>Date</type>
</CustomField>