force-app/main/default/objects/Contact/fields/Terminated_Date__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Date__c</fullName>
    <label>Terminated Date</label>
    <type>Date</type>
</CustomField>