force-app/main/default/objects/Contact/fields/Travel_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Travel_Long_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Long Term</label>
    <type>Checkbox</type>
</CustomField>