force-app/main/default/objects/Contact/fields/Travel_Short_Term__c.field-meta.xml
<CustomField>
    <fullName>Travel_Short_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Short Term</label>
    <type>Checkbox</type>
</CustomField>