force-app/main/default/objects/Contact/fields/USA_VISA_Date__c.field-meta.xml
<CustomField>
    <fullName>USA_VISA_Date__c</fullName>
    <label>USA VISA Date</label>
    <type>Date</type>
</CustomField>